--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ requests==2.30.0
 requests-oauthlib==1.3.1
 six==1.16.0
 sqlparse==0.4.3
+stripe==5.4.0
 urllib3==2.0.2
 vine==5.0.0
 wcwidth==0.2.6
